open-bpmn.glsp-client/open-bpmn-glsp/css/diagram.css
/********************************************************************************
 * Copyright (c) 2019-2022 EclipseSource and others.
 *
 * This program and the accompanying materials are made available under the
 * terms of the Eclipse Public License v. 2.0 which is available at
 * http://www.eclipse.org/legal/epl-2.0.
 *
 * This Source Code may also be made available under the following Secondary
 * Licenses when the conditions for such availability set forth in the Eclipse
 * Public License v. 2.0 are satisfied: GNU General Public License, version 2
 * with the GNU Classpath Exception which is available at
 * https://www.gnu.org/software/classpath/license.html.
 *
 * SPDX-License-Identifier: EPL-2.0 OR GPL-2.0 WITH Classpath-exception-2.0
 ********************************************************************************/

.sprotty-graph {
    font-size: 15pt;
    border: none;
    height: 100%;
    background-size: 10px 10px;

	background-image: linear-gradient(to right, #E4E4E4 1px, transparent 1px), linear-gradient(to bottom, #E4E4E4 1px, transparent 1px);
    
}

.vs-dark .sprotty-graph { 
    /* vs-dark dark-theia theia-dark    vs light-theia theia-light  */
	background-image: linear-gradient(to right, #2A2A2A 1px, transparent 1px), linear-gradient(to bottom, #2A2A2A 1px, transparent 1px);
}

.sprotty-text {
    font-size: 12pt;
    text-anchor: middle;
}

.sprotty-node {
    stroke-width: 0;
    font-weight: bold;
}

.sprotty-label {
    stroke-width: 0;
    fill: #000;
    font-weight: inherit;
    text-align: inherit;
    font-size: 100%;
}

.sprotty-label.heading {
    font-weight: normal;
    font-size: 0.7em;
    fill: #f0f3f8;
}


.sprotty-resize-handle.selected {
    fill: #47699B;
}

.icon path {
    stroke-width: 0;
    fill: #f0f3f8;
}

.icon .icon-background {
    fill: transparent;
}

.BPMNLabel > .sprotty-node {
	fill: transparent;
}

.BPMNLabel > .sprotty-label.heading {
	fill: var(--theia-titleBar-activeForeground);
}
.BPMNLabel > .sprotty-node.mouseover {
	fill: var(--theia-activityBar-background);
}

.task > .sprotty-node {
    fill: #425C81;
}

.task.bpmnextension-imixs > .sprotty-node {
	stroke: darkorange;
	stroke-width: 1;
}
.event.bpmnextension-imixs > .sprotty-node {
	stroke: darkorange;
	stroke-width: 1;
}

/*** Events ***/


.event.startEvent > circle {
	fill: #57A14C;
}
.event.endEvent > circle {
	fill: #BE5961;
}

.event.intermediateCatchEvent > circle {
	fill: #82848a;
}
.event.intermediateThrowEvent > circle {
	fill: #82848a;
}


/*** Gateways ***/

.gateway > polygon {
    fill: #C39D5C;
}

.pool > .sprotty-node {
    fill: var(--theia-titleBar-activeBackground);
    opacity: 40%;
    stroke: var(--theia-focusBorder);
    stroke-width: 0.4;

    outline-color: var(--theia-focusBorder);
    outline-style: solid;
    outline-width: 1px;
    outline-offset: -1px;    
}
.pool > .sprotty-node.mouseover {
	 opacity: 70%;
}

.lane > .sprotty-node {
    fill: none;
    stroke: var(--theia-focusBorder);
    stroke-width: 0.4;
    
    outline-color: var(--theia-focusBorder);
    outline-style: solid;
    outline-width: 1px;
    outline-offset: -1px;
}

.pool .header text {
	font-weight: normal;
    font-size: 0.7em;
    fill: var(--theia-titleBar-activeForeground);
}

/* sequence flow */
.sprotty-edge.sequenceflow:not(.selected),
.sprotty-edge.sequenceflow:not(.selected) .arrow,
.sprotty-edge.sequenceflow.medium:not(.selected),
.sprotty-edge.sequenceflow.medium:not(.selected) .arrow {
    stroke: rgb(174 190 243);
}

/* selected sequence flow */
.sprotty-edge.sequenceflow.selected,
.sprotty-edge.sequenceflow.selected .arrow,
.sprotty-edge.sequenceflow.medium.selected,
.sprotty-edge.sequenceflow.medium.selected .arrow {
    stroke: #ffdf8b;
}



/* arrow */

.sprotty-edge.sequenceflow:not(.selected) .arrow,
.sprotty-edge.sequenceflow.medium:not(.selected) .arrow {
    fill: rgb(174 190 243);
}

.sprotty-edge.sequenceflow.high:not(.selected),
.sprotty-edge.sequenceflow.high:not(.selected) .arrow {
    stroke: rgb(174 190 243);
}

.sprotty-edge.sequenceflow.high:not(.selected) .arrow {
    fill: rgb(174 190 243);
}







.helper-line {
	stroke: #f18e00;
	stroke-width:1;
}







.sprotty-comp {
    stroke: transparent;
    fill: transparent;
}

.label-edit input {
    margin-top: -3px;
    margin-left: -3px;
}

